# junomontanaagibot

./: .bench_100K  .bench_1M  .gitignore  .p2p_test  CLAUDE.md  LICENSE  Montana_v4.3.md  ProofOfTime.md  README.md  ROADMAP.md  WHITEPAPER_EN.md  config.py  consensus.py  crypto.py  dag.py  dag_storage.py  dashboard.py  database.py  engine.py  install.sh  metatron.py  montana_fuzzer.py  network.py  node.py  pantheon.py  poh.py  pot.py  privacy.py  ristretto.py  rpc.py  structures.py  tiered_privacy.py  wallet.py
ATC v10/Layer 3+ Montana/: MONTANA_ATC_MAPPING.md  MONTANA_TECHNICAL_SPECIFICATION.md  README.md  WHITEPAPER.md
ATC v8.1/Layer 1/: EVALUATION_QUICK_REFERENCE.md  HYPERCRITICISM_PROOF.md  RELEASE_v1.1.md  layer_1.md
ATC v8.1/Layer 2/: EVALUATION_QUICK_REFERENCE.md  HYPERCRITICISM_PROOF.md  RELEASE_v1.0.md  layer_2.md
ATC v9/Layer 3+/: MONTANA_ATC_MAPPING.md
ATC v9/Layer 3+ Montana/: MONTANA_ATC_MAPPING.md  MONTANA_TECHNICAL_SPECIFICATION.md  README.md  WHITEPAPER.md
Bitcoin Core 30.1/src/: clientversion.cpp
Montana/: MONTANA_ATC_MAPPING.md  MONTANA_TECHNICAL_SPECIFICATION.md  Montana.pages  README.md  WHITEPAPER.md
Montana ACP/: .gitignore  MONTANA.md  layer_0.md  layer_1.md  layer_minus_1.md
Montana ACP/Council/: ADVERSARY_BENCHMARK_PROMPT.md  BUILDER_BENCHMARK_PROMPT.md  CHAIRMAN_BENCHMARK_PROMPT.md  CHAIRMAN_WORK_LOG.md  COUNCIL_BENCHMARK_REGISTRY.md  DISNEY_STRATEGY_VOTING_PROMPT.md  JOIN_COUNCIL_PROMPT.md  KEYKEEPER_BENCHMARK_PROMPT.md  MONTANA_WFO.md  SECURITY_COUNCIL_MEETING.md  VISIONARY_BENCHMARK_PROMPT.md
Montana ACP/academic/: TECHNOLOGIES.md
Montana ACP/keys/: alejandro_montana.gpg.pub
Montana ACP/montana/: .gitignore  Cargo.toml
Montana ACP/scripts/: server_sync.sh  sync_all.sh
Montana-v0.1/: EVALUATION_QUICK_REFERENCE.md  HYPERCRITICISM_PROOF.md  MONTANA_ATC_MAPPING.md  MONTANA_TECHNICAL_SPECIFICATION.md  README.md  WHITEPAPER.md  montana.html  montana.tex  pyproject.toml  requirements.txt
Montana-v0.1/benchmarks/: VDF_BENCHMARK_REPORT.md  vdf_benchmark.py
Montana-v0.1/montana/: __init__.py  constants.py
Montana-v0.1/montana-stark/: .gitignore  Cargo.toml  README.md  pyproject.toml
Montana-v0.1/montana-stark/benches/: vdf_stark.rs
Montana-v0.1/montana-stark/src/: lib.rs  prover.rs  types.rs  vdf_air.rs  verifier.rs
Montana-v0.1/montana-stark/tests/: integration_tests.rs
Montana-v0.1/montana/api/: __init__.py  rpc.py  websocket.py
Montana-v0.1/montana/bot/: __init__.py  challenges.py  telegram.py
Montana-v0.1/montana/cli/: __init__.py  main.py
Montana-v0.1/montana/consensus/: __init__.py  dag.py  eligibility.py  score.py
Montana-v0.1/montana/core/: __init__.py  atomic_time.py  block.py  heartbeat.py  serialization.py  types.py  vdf.py  vdf_accumulator.py
Montana-v0.1/montana/crypto/: __init__.py  hash.py  pedersen.py  ring.py  sphincs.py  stark.py  vrf.py
Montana-v0.1/montana/network/: __init__.py  bootstrap.py  handshake.py  messages.py  peer.py  protocol.py  sync.py
Montana-v0.1/montana/node/: __init__.py  full_node.py  light_node.py  mempool.py
Montana-v0.1/montana/privacy/: __init__.py  stealth.py  tiers.py
Montana-v0.1/montana/state/: __init__.py  accounts.py  machine.py  storage.py
Montana-v0.1/montana/tests/: server_test.py
audits/: AUDIT_PROMPT.md
docs/: MULTIMODAL_AUDIT.md  ProofOfTime_Whitepaper_v2.1.md  ProofOfTime_Whitepaper_v2.md  README.md  RELEASE_v2.0.md  Time_Whitepaper_v3.0.md  whitepaper_v2.tex
pantheon/: PANTHEON.md
testnet/: config.json
tests/: test_dag.py  test_fuzz.py  test_integration.py  test_stress.py
Монтана_Montana_蒙大拿/: junona_navigation.py
(+148 files in other folders)
