[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "montana"
version = "0.1.0"
description = "Montana: Mechanism for asymptotic trust in the value of time"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alejandro Montana", email = "montana@example.com"}
]
keywords = ["vdf", "consensus", "cryptocurrency", "stark", "post-quantum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"
dependencies = [
    "pqcrypto>=0.1.0",
    "cryptography>=41.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "lmdb>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
telegram = [
    "python-telegram-bot>=20.0",
]

[project.scripts]
montana = "montana.cli.main:main"

[project.urls]
Homepage = "https://github.com/afgrouptime/atc"
Documentation = "https://github.com/afgrouptime/atc/tree/main/Montana-v0.1"
Repository = "https://github.com/afgrouptime/atc"

[tool.setuptools.packages.find]
where = ["."]
include = ["montana*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["montana/tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
