[package]
name = "montana-stark"
version = "0.1.0"
edition = "2021"
authors = ["Alejandro Montana"]
description = "STARK proofs for Montana VDF verification"
license = "MIT"

[lib]
name = "montana_stark"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Winterfell STARK library
winterfell = "0.9"
winter-air = "0.9"
winter-math = "0.9"
winter-crypto = "0.9"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Hashing (SHAKE256)
sha3 = "0.10"

# Error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "vdf_stark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
